--- a/05/spring-app-auth/auth-demo/build.gradle
+++ b/05/spring-app-auth/auth-demo/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.modelmapper:modelmapper:3.0.0'
+    implementation 'com.auth0:java-jwt:4.2.1'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
