Task Manager API - Minimum endpoints

--- a/03/taskmgr-spring/src/main/resources/application.yaml
+++ b/03/taskmgr-spring/src/main/resources/application.yaml
@@ -3,10 +3,10 @@ server:
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:file:./test.db
   jpa:
     show-sql: true
     properties:
       hibernate.format_sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
